--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,23 @@
+html {
+  height: 100%;
+}
+body {
+  margin:0;
+  padding:0;
+  background: linear-gradient(#141e30, #243b55);
+}
 .App {
-  text-align: center;
-  display: flex;
-  justify-content: center;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 30px;
+  transform: translate(-50%, -50%);
+  background: rgba(0,0,0,.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+  border-radius: 10px;
 }
 
 .App-logo {
@@ -38,3 +54,38 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  width: 171px;
+  height: 65px;
+  background: #262626;
+  box-shadow: 0px 0px 16px #047ff1;
+  border-radius: 2px;
+  z-index: 3;
+  border: 2px solid;
+  transition: all 1s ease-in-out;
+
+  }
+button span {
+  text-align: center;
+  align-items: center;
+  left: 56px;
+  font-size: 20px;
+  line-height: 20px;
+  margin: 0 auto;
+  transition: all 0.3s ease-in-out;
+  background-color:#FFFF;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  }
+  .App input, .App textarea {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+    background: transparent;
+  }
